--- a/index.html
+++ b/index.html
@@ -16,7 +16,61 @@
 </head>
 
 <body>
-    <div style="background-color: aqua;">Box</div>
+    <!-- header -->
+    <header class="header">
+        <div class="header-top">Due to the COVID 19 epidemic, orders may be processed with a slight delay</div>
+        <div class="header-main">
+            <div class="container">
+                <div class="inner-wrap">
+                    <div class="inner-logo">
+                        <a href="/">
+                            <img src="/assets/images/logo.png" alt="">
+                            <span>CureM</span>
+                        </a>
+                    </div>
+                    <div class="inner-menu">
+                        <ul>
+                            <li>
+                                <a href="/">Home</a>
+                            </li>
+                            <li>
+                                <a href="/">Shop</a>
+                            </li>
+                            <li>
+                                <a href="/">Products</a>
+                            </li>
+                            <li>
+                                <a href="/">Contacts</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="inner-contact">
+                        Need help? 989-879-0847
+                    </div>
+                    <div class="inner-social">
+                        <ul>
+                            <li>
+                                <a href="" target="_blank">
+                                    <i class="fa-brands fa-facebook"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="" target="_blank">
+                                    <i class="fa-brands fa-twitter"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="" target="_blank">
+                                    <i class="fa-brands fa-instagram"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- end header -->
 </body>
 
 </html>
