--- a/index.html
+++ b/index.html
@@ -71,6 +71,41 @@
         </div>
     </header>
     <!-- end header -->
+
+    <!-- section one -->
+    <div class="section-one">
+        <div class="container">
+            <div class="inner-wrap">
+                <div class="inner-content">
+                    <h1 class="inner-title">
+                        Antivirus
+                        <br>
+                        Mask Store
+                    </h1>
+                    <p class="inner-dsc">The easiest way to protect yourself</p>
+                    <div class="inner-list">
+                        <div class="inner-item">
+                            <i class="fa-solid fa-shield-halved"></i>
+                            <span>Anti-Bacterial</span>
+                        </div>
+                        <div class="inner-item">
+                            <i class="fa-solid fa-earth-americas"></i>
+                            <span>Anti-Virus</span>
+                        </div>
+                    </div>
+                    <a href="" class="button button-two">Shop now</a>
+                </div>
+                <div class="inner-img">
+                    <img src="/assets/images/product1.jpg" alt="">
+                    <div class="inner-sale">
+                        <span>only</span>
+                        <span>$25</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- end section one -->
 </body>
 
 </html>
