--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
                             </li>
                         </ul>
                     </div>
+                    <div class="inner-menu-mobile">
+                        <i class="fa-solid fa-bars"></i>
+                    </div>
                 </div>
             </div>
         </div>
@@ -106,6 +109,41 @@
         </div>
     </div>
     <!-- end section one -->
+
+    <!-- section two -->
+    <div class="section-two">
+        <div class="container">
+            <div class="inner-wrap">
+                <div class="inner-box">
+                    <img src="/assets/images/1.jpeg" alt="">
+                    <div class="inner-content">
+                        <div class="inner-tag">NEW</div>
+                        <h3 class="inner-title">Antivirus <br> Mask</h3>
+                        <a href="" class="button button-one">More</a>
+                    </div>
+                </div>
+                <div class="inner-box">
+                    <img src="/assets/images/2.jpg" alt="">
+                    <div class="inner-content">
+                        <h3 class="inner-title">Basic <br> Mask</h3>
+                        <div class="inner-sale">-30%</div>
+                        <a href="" class="button button-one">Shop now</a>
+                    </div>
+                </div>
+                <div class="inner-box">
+                    <img src="/assets/images/3.jpg" alt="">
+                    <div class="inner-content">
+                        <h3 class="inner-title">Medical Mask</h3>
+                        <div class="inner-price-new">$15.99</div>
+                        <div class="inner-price-old">$29.99</div>
+                        <a href="" class="button button-one">Buy now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <!-- end section two -->
 </body>
 
 </html>
